--- a/static/theme_slider.scss
+++ b/static/theme_slider.scss
@@ -1,6 +1,4 @@
 .toggleWrapper {
-  position: relative;
-  left: 25%;
 
   input {
     position: absolute;
